--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2186,8 +2186,8 @@
     <p><em>ϥⲛⲁⲁⲓⲧⲉⲛ ⲛ̀ⲣⲁⲙⲁⲟ</em> «il nous rendra riches»<sup class="footnote">4</sup>.</p>
     <p><em>ⲉⲥ-ⲟⲓ ⲛ̀ⲣⲉⲙϩⲉ</em> «elle est libre»<sup class="footnote">5</sup>.</p>
     <p>De même, le mot qui est au second rang demeure le plus souvent invariable, parfois aussi il s'accorde:</p>
-    <p><em>ϩⲁⲛⲣⲱⲙⲓ ⲛ̀ⲥⲁⲃⲉ</em> «des hommes prudents»<sup class="footnote">6</sup>.</p>
-    <p><em>ϩⲁⲛⲥⲁⲃⲏ ⲛ̀ⲥϩⲓⲙⲓ</em> «des femmes prudentes»<sup class="footnote">7</sup>.</p>
+    <p><em>ϩⲁⲛⲣⲱⲙⲓ ⲛ`ⲥⲁⲃⲉ</em> «des hommes prudents»<sup class="footnote">6</sup>.</p>
+    <p><em>ϩⲁⲛⲥⲁⲃⲏ ⲛ`ⲥϩⲓⲙⲓ</em> «des femmes prudentes»<sup class="footnote">7</sup>.</p>
     <p class="footnote">1. Jean 1, 3.</p>
     <p class="footnote">2. Th. 128.</p>
     <p class="footnote">3. Luc 14, 11.</p>
@@ -2592,11 +2592,11 @@
     <p><em>ⲟⲩⲱⲛ</em> signifie «ouvrir» et «s'ouvrir»,</p>
     <p><em>ⲑⲱⲟⲩϯ</em> «réunir» et «se réunir».</p>
     <p>Dans le premier cas ces verbes ont un complément direct; dans le second cas, le complément direct devient sujet:</p>
-    <p><em>ⲁϥⲟⲩⲱⲛ ⲙ̀ⲡⲓⲣⲟ</em> «il ouvrit la porte»;
+    <p><em>ⲁϥⲟⲩⲱⲛ ⲙ`ⲡⲓⲣⲟ</em> «il ouvrit la porte»;
 <em>ⲁ ⲡⲓⲣⲟ ⲟⲩⲱⲛ</em> «la porte s'ouvrit »<sup class="footnote">1</sup>.</p>
     <p class="footnote">1. MS. 424.</p>
     <p><em>ⲁϥⲑⲱⲟⲩϯ ⲙ̀ⲡⲓⲙⲱⲟⲩ</em> «il réunit l'eau»;</p>
-    <p><em>ⲁϥⲑⲱⲟⲩϯ ⲛ̀ϫⲉ ⲡⲓⲙⲱⲟⲩ</em> «l'eau se réunit»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲁϥⲑⲱⲟⲩϯ ⲛ`ϫⲉ ⲡⲓⲙⲱⲟⲩ</em> «l'eau se réunit»<sup class="footnote">1</sup>.</p>
     <p>Dans les verbes <i>intransitifs</i>, l'infinitif indique une action qui reste dans le sujet lui-même; dans les verbes <i>qualitatifs</i>, l'action d'acquérir la qualité exprimée par la racine;</p>
     <p><em>ⲁⲓⲁⲓ</em> «croître»,</p>
     <p><em>ⲟⲩⲃⲁϣ</em> «devenir blanc»,</p>
@@ -2638,9 +2638,44 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     <p>Dans quelques verbes transitifs, le qualitatif a, à peu près, le sens de l'infinitif qui a disparu ou est peu employé. Tels sont:</p>
     <p><em>ⲕⲏⲛ</em> «cesser», au lieu de <em>ⲕⲱⲛ</em> inusité;</p>
     <p><em>ⲓⲏⲥ</em> «se hâter», à côté de <em>ⲓⲱⲥ</em> plus rare.</p>
-    <p>Tous les verbes n'ont pas nécessairement un qualitatif; celui-ci manque dans quelques verbes transitifs et intransitifs, comme dans <em>ϫⲱ</em> «dire», <em>ⲙⲟⲥϯ</em> «haïr», <em>ⲧⲱⲟⲩⲛ</em> «lever», <em>ⲙⲉⲩⲓ</em> «penser», <em>ⲛⲁⲩ</em> «voir».</p>
+    <p>Tous les verbes n'ont pas nécessairement un qualitatif; celui-ci manque dans quelques verbes transitifs et intransitifs, comme dans <em>ϫⲱ</em> «dire», <em>ⲙⲟⲥϯ</em> «haïr», <em>ⲧⲱⲟⲩⲛ</em> «lever », <em>ⲙⲉⲩⲓ</em> «penser», <em>ⲛⲁⲩ</em> «voir».</p>
     <p>Les verbes qui n'ont que l'infinitif <i>absolu</i>, sans les autres formes et sans le qualitatif, sont appelés verbes <i>invariables</i>; les autres, verbes <i>variables</i>.</p>
-    
+    <p>II. Classification des verbes.</p>
+    <p>Au point de vue de l'étymologie et de la formation, les verbes se divisent en <i>simples</i>, <i>causatifs</i> et <i>composés</i>.</p>
+    <p>Les verbes <i>simples</i> sont formés de la racine elle-même: <em>ⲃⲱⲗ</em> «délier», <em>ⲱⲛϧ</em> «vivre».</p>
+    <p>Les verbes <i>causatifs</i> sont formés de la racine et d'un préfixe qui lui donne le sens causatif: <em>ⲧ-ⲁⲛϧⲟ</em> «vivifier».</p>
+    <p>Les verbes <i>composés</i> sont formés de deux racines: <em>ϣⲉⲡ-ϩⲙⲟⲧ</em> «rendre grâce».</p>
+    <p>A. Verbes simples.</p>
+    <p><i>Division d'après les radicales.</i></p>
+    <p>Sous le rapport du nombre et de la nature des lettres radicales, les verbes simples se divisent en 8 classes:</p>
+    <p>1. Verbes de 2 radicales: <em>ⲃⲱⲗ</em>.</p>
+    <p>2. Verbes à seconde radicale géminée: <em>ϧⲙⲟⲙ</em>.</p>
+    <p>3. Verbes de 3 radicales: <em>ⲫⲱⲣϣ</em>.</p>
+    <p>4. Verbes à troisième radicale faible: <em>ⲙⲓⲥⲓ</em> (<i>msy</i>).</p>
+    <p>5. Verbes de 4 radicales: <em>ⲃⲟⲣⲃⲉⲣ</em>.</p>
+    <p>6. Verbes de 5 radicales: <em>ⲥⲕⲟⲣⲕⲉⲣ</em>.</p>
+    <p>7. Verbes à troisième radicale géminée: <em>ⲥⲟⲃϯ</em> (<i>spdd</i>).</p>
+    <p>8. Verbes à troisième radicale faible: <em>ⲙⲟⲥϯ</em> (<i>msdy</i>).</p>
+    <p>Plusieurs verbes coptes ont perdu une ou deux des radicales qu'ils avaient en égyptien, par ex. <em>ϣⲱⲡⲓ</em>, ég. <i>ḫpr</i> «être», <em>ⲭⲱ</em>, ég. <i>ḫaꜥ</i> «placer». Au point de vue de la morphologie, quelques-uns de ces verbes se comportent comme s'ils avaient toutes leurs radicales, les autres suivent la règle de la nouvelle classe à laquelle ils appartiennent en copte.</p>
+    <p>Dans la classification suivante, nous donnons les règles générales en indiquant les principales exceptions, on trouvera les autres au tableau général des verbes.</p>
+    <p>1. Verbes de deux radicales.</p>
+    <table>
+      <tr>
+        <th></th><th>Infinitif</th><th></th><th></th><th>Qualitatif</th><th></th>
+      </tr>
+      <tr>
+        <td></td><td>absolu</td><td>construit</td><td>pronominal</td><td></td><td></td>
+      </tr>
+      <tr>
+        <td><i>Règle:</td><td><em>ⲱ</em></td><td><em>ⲉ</em></td><td><em>ⲟ</em></td><td><em>ⲏ</em></td><td></td>
+      </tr>
+      <tr>
+        <td><i></td><td><em>ⲃⲱⲗ</em></td><td><em>ⲃⲉⲗ-</em></td><td><em>ⲃⲟⲗ⸗</em></td><td><em>ⲃⲏⲗ</em></td><td>délier,</td>
+      </tr>
+      <tr>
+        <td><i></td><td><em>ⲱⲡ</em></td><td><em>ⲉⲡ-</em></td><td><em>ⲟⲡ⸗</em></td><td><em>ⲏⲡ</em></td><td>compter.</td>
+      </tr>
+    </table>
   </div>
 </div>
 	</body>
