--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2676,6 +2676,38 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
         <td><i></td><td><em>ⲱⲡ</em></td><td><em>ⲉⲡ-</em></td><td><em>ⲟⲡ⸗</em></td><td><em>ⲏⲡ</em></td><td>compter.</td>
       </tr>
     </table>
+    <p>De même les verbes qui commencent par <em>ⲙ</em> <em>ⲛ</em> et ont <em>ⲟⲩ</em> à la place de <em>ⲱ</em> pour voyelle formative à l'infinitif absolu (29):</p>
+    <p><em>ⲙⲟⲩⲛ</em> rester,</p>
+    <p><em>ⲙⲟⲩⲣ</em> lier,</p>
+    <p><em>ⲛⲟⲩⲧ</em> moudre,</p>
+    <p><em>ⲛⲟⲩϫ</em> jeter.</p>
+    <p>Quelques verbes de deux radicales ont un double infinitif, un de la forme <em>ⲃⲱⲗ</em> et un autre terminé en <em>ⲓ</em>; tels sont:</p>
+    <table>
+      <tr>
+        <td><em>ⲥⲱⲕ</em></td><td><em>ⲥⲱⲕⲓ</em></td><td><em>ⲥⲉⲕ-</em></td><td><em>ⲥⲟⲕ⸗</em></td><td><em>ⲥⲏⲕ</em></td><td>pousser,</td>
+      </tr>
+      <tr>
+        <td><em>ⲥⲱⲥ</em></td><td><em>ⲥⲱⲥⲓ</em></td><td>—</td><td><em>ⲥⲟⲥ⸗</em></td><td>—</td><td>renverser,</td>
+      </tr>
+      <tr>
+        <td><em>ⲱⲗ</em></td><td><em>ⲱⲗⲓ</em></td><td><em>ⲉⲗ-</em></td><td><em>ⲟⲗ⸗</em></td><td>—</td><td>enlever,</td>
+      </tr>
+      <tr>
+        <td><em>ϣⲱⲕ</em></td><td><em>ϣⲱⲕⲓ</em></td><td><em>ϣⲉⲕ-</em></td><td><em>ϣⲟⲕ⸗</em></td><td><em>ϣⲏⲕ</em></td><td>creuser,</td>
+      </tr>
+      <tr>
+        <td><em>ϥⲱⲧ</em></td><td><em>ϥⲱϯ</em></td><td><em>ϥⲉⲧ-</em></td><td><em>ϥⲟⲧ⸗</em></td><td><em>ϥⲏϯ</em></td><td>effacer,</td>
+      </tr>
+      <tr>
+        <td><em>ϫⲱϫ</em></td><td><em>ϫⲱϫⲓ</em></td><td><em>ϫⲉϫ-</em></td><td><em>ϫⲟϫ⸗</em></td><td><em>ϫⲏϫ ϫⲏϫⲓ</em></td><td>couper,</td>
+      </tr>
+      <tr>
+        <td><em>ϭⲱⲡ</em></td><td><em>ϭⲱⲡⲓ</em></td><td><em>ϭⲉⲡ-</em></td><td><em>ϭⲟⲡ⸗</em></td><td><em>ϭⲏⲡ</em></td><td>saisir,</td>
+      </tr>
+      <tr>
+        <td><em>ⲓⲱ</em></td><td><em>ⲓⲱⲓ</em></td><td><em>ⲓⲁ-</em></td><td><em>ⲓⲁ⸗ (31)</em></td><td>(<em>ⲓⲱⲟⲩ</em>)</td><td>laver.</td>
+      </tr>
+    </table>
   </div>
 </div>
 	</body>
