--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2705,7 +2705,43 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
         <td><em>ϭⲱⲡ</em></td><td><em>ϭⲱⲡⲓ</em></td><td><em>ϭⲉⲡ-</em></td><td><em>ϭⲟⲡ⸗</em></td><td><em>ϭⲏⲡ</em></td><td>saisir,</td>
       </tr>
       <tr>
-        <td><em>ⲓⲱ</em></td><td><em>ⲓⲱⲓ</em></td><td><em>ⲓⲁ-</em></td><td><em>ⲓⲁ⸗ (31)</em></td><td>(<em>ⲓⲱⲟⲩ</em>)</td><td>laver.</td>
+        <td><em>ⲓⲱ</em></td><td><em>ⲓⲱⲓ</em></td><td><em>ⲓⲁ-</em></td><td><em>ⲓⲁ⸗</em> (31)</td><td>(<em>ⲓⲱⲟⲩ</em>)</td><td>laver.</td>
+      </tr>
+    </table>
+    <p>Parmi les verbes qui n'ont qu'un infinitif de la forme <em>ⲥⲱⲕⲓ</em> terminée en <em>ⲓ</em>, avec <em>ⲱ</em> pour voyelle formative, quatre ont leur qualitatif en <em>ⲟ</em> et appartiennent à la 3<sup>e</sup> classe (213, 3), les autres l'ont en <em>ⲏ</em> ou n'en ont point; les voici:</p>
+    <table>
+      <tr>
+        <td><em>ⲕⲱϯ</em></td><td><em>ⲕⲉⲧ-</em></td><td><em>ⲕⲟⲧ⸗</em></td><td>—</td><td>retourner,</td>
+      </tr>
+      <tr>
+        <td><em>ⲗⲱϫⲓ</em></td><td>—</td><td><em>ⲗⲟϫ⸗</em></td><td>—</td><td>guérir,</td>
+      </tr>
+      <tr>
+        <td><em>ⲣⲱϣⲓ</em></td><td><em>ⲣⲉϣ- ⲣⲁϣ-</em></td><td><em>ⲣⲁϣ⸗</em> (30)</td><td>—</td><td>suffire,</td>
+      </tr>
+      <tr>
+        <td><em>ⲣⲱϧⲓ</em></td><td>—</td><td><em>ⲣⲁϧ</em> (30)</td><td>—</td><td>laver,</td>
+      </tr>
+      <tr>
+        <td><em>ⲥⲱϧⲓ</em></td><td>—</td><td><em>ⲥⲁϧ⸗</em> (30)</td><td><em>ⲥⲏϧ ⲥⲏϧⲓ</em></td><td>tisser,</td>
+      </tr>
+      <tr>
+        <td><em>ⲥⲱϯ</em></td><td><em>ⲥⲉⲧ-</em></td><td><em>ⲥⲟⲧ⸗</em></td><td>—</td><td>sauver,</td>
+      </tr>
+      <tr>
+        <td><em>ⲧⲱϫⲓ</em></td><td>—</td><td><em>ⲧⲟϫ⸗</em></td><td>—</td><td>planter,</td>
+      </tr>
+      <tr>
+        <td><em>ⲫⲱϫⲓ</em></td><td>—</td><td>—</td><td>—</td><td>rompre,</td>
+      </tr>
+      <tr>
+        <td><em>ⲱϥⲓ</em></td><td>—</td><td><em>ⲟϥ⸗</em></td><td>—</td><td>dompter,</td>
+      </tr>
+      <tr>
+        <td><em>ϥⲱϫⲓ</em></td><td><em>ϥⲉϫ-</em></td><td><em>ϥⲟϫ⸗</em></td><td><em>ϥⲏϫ</em></td><td>arracher,</td>
+      </tr>
+      <tr>
+        <td><em>ϩⲱⲙⲓ</em></td><td><em>ϩⲉⲙ-</em></td><td><em>ϩⲟⲙ⸗</em></td><td><em>ϩⲏⲙ</em></td><td>fouler.</td>
       </tr>
     </table>
   </div>
