--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2744,6 +2744,34 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
         <td><em>ϩⲱⲙⲓ</em></td><td><em>ϩⲉⲙ-</em></td><td><em>ϩⲟⲙ⸗</em></td><td><em>ϩⲏⲙ</em></td><td>fouler.</td>
       </tr>
     </table>
+    <p>Pour les verbes de la forme <em>ⲃⲱⲗ</em> qui ont leur qualitatif en <em>ⲟ</em>, voir 213, 2.</p>
+    <p><i>Exceptions.</i> Dans les verbes terminés par <em>ϣ</em> <em>ϧ</em> <em>ϩ</em> (30):</p>
+    <p>1. Devant <em>ϣ</em>, parfois <em>ⲉ</em> et généralement <em>ⲟ</em> se changent en <em>ⲁ</em>:</p>
+    <table>
+      <tr>
+        <td><em>ⲃⲱϣ</em></td><td><em>ⲃⲁϣ-</em></td><td><em>ⲃⲁϣ⸗</em></td><td><em>ⲃⲏϣ</em></td><td>dépouiller,</td>
+      </tr>
+      <tr>
+        <td><em>ⲑⲱϣ</em></td><td><em>ⲑⲉϣ-</em></td><td><em>ⲑⲁϣ⸗</em></td><td><em>ⲑⲏϣ</em></td><td>définir,</td>
+      </tr>
+      <tr>
+        <td><em>ⲕⲱϣ</em></td><td><em>ⲕⲁϣ-</em></td><td><em>ⲕⲁϣ⸗</em></td><td>—</td><td>briser.</td>
+      </tr>
+    </table>
+    <p>2. Devant <em>ϧ</em>, <em>ⲟ</em> se change toujours en <em>ⲁ</em>, <em>ⲉ</em> rarement:</p>
+    <table>
+      <tr>
+        <td><em>ⲑⲱϧ</em></td><td><em>ⲑⲉϧ-</em></td><td><em>ⲑⲁϧ⸗</em></td><td><em>ⲑⲏϧ</em></td><td>mêler,</td>
+      </tr>
+      <tr>
+        <td><em>ⲫⲱϧ</em></td><td><em>ⲫⲉϧ-</em></td><td><em>ⲫⲁϧ⸗</em></td><td><em>ⲫⲏϧ</em></td><td>mettre en pièces,</td>
+      </tr>
+      <tr>
+        <td><em>ϧⲱϧ</em></td><td><em>ϧⲁϧ-</em></td><td><em>ϧⲁϧ⸗</em></td><td>—</td><td>démanger.</td>
+      </tr>
+    </table>
+    <p>Comparez aussi <em>ⲣⲱϧⲓ</em>, <em>ⲥⲱϧⲓ</em> (209).</p>
+    <p>3. Devant <em>ϩ</em>, <em>ⲱ</em> = <em>ⲟ</em>, <em>ⲉ</em> = <em>ⲁ</em> le plus souvent, <em>ⲟ</em> = <em>ⲁ</em>, <em>ⲏ</em> = <em>ⲉ</em>.</p>
   </div>
 </div>
 	</body>
