--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2772,6 +2772,45 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     </table>
     <p>Comparez aussi <em>ⲣⲱϧⲓ</em>, <em>ⲥⲱϧⲓ</em> (209).</p>
     <p>3. Devant <em>ϩ</em>, <em>ⲱ</em> = <em>ⲟ</em>, <em>ⲉ</em> = <em>ⲁ</em> le plus souvent, <em>ⲟ</em> = <em>ⲁ</em>, <em>ⲏ</em> = <em>ⲉ</em>.</p>
+    <table>
+      <tr>
+        <td><em>ⲑⲟϩ</em></td><td>—</td><td>—</td><td><em>ⲑⲉϩ</em></td><td>troubler,</td>
+      </tr>
+      <tr>
+        <td><em>ⲙⲟϩ</em></td><td><em>ⲙⲁϩ-</em></td><td><em>ⲙⲁϩ⸗</em></td><td><em>ⲙⲉϩ</em></td><td>remplir,</td>
+      </tr>
+      <tr>
+        <td><em>ⲛⲟϩ</em></td><td><em>ⲛⲉϩ-</em></td><td><em>ⲛⲁϩ⸗</em></td><td><em>ⲛⲉϩ</em></td><td>secouer,</td>
+      </tr>
+      <tr>
+        <td><em>ⲟⲩⲟϩ</em></td><td><em>ⲟⲩⲁϩ-</em></td><td><em>ⲟⲩⲁϩ⸗</em></td><td><em>ⲟⲩⲉϩ</em></td><td>ajouter,</td>
+      </tr>
+      <tr>
+        <td><em>ⲫⲟϩ</em></td><td>—</td><td>—</td><td><em>ⲫⲉϩ</em></td><td>parvenir,</td>
+      </tr>
+      <tr>
+        <td><em>ⲭⲟϩ</em></td><td>—</td><td>—</td><td>—</td><td>envier,</td>
+      </tr>
+      <tr>
+        <td><em>ϭⲟⲥ</em></td><td>—</td><td>—</td><td><em>ϭⲉⲥ</em></td><td>atteindre.</td>
+      </tr>
+    </table>
+    <p>2. Verbes à seconde radicale géminée.</p>
+    <p>Le redoublement ne paraît que lorsque les deux consonnes semblables sont séparées par la voyelle formative; tous les verbes de cette classe sont intransitifs.</p>
+    <table>
+      <tr>
+        <td><i>Régle:</i></td><td><em>ⲟ</em></td><td>—</td><td>—</td><td><em>ⲏ</em></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td><em>ϧⲙⲟⲙ</em></td><td></td><td></td><td><em>ϧⲏⲙ</em></td><td>s'échauffer.</td>
+      </tr>
+    </table>
+    <p>Tels sont:</p>
+    <p><em>ⲭⲙⲟⲙ</em>, <i>qual.</i> <em>ⲭⲏⲙ</em> noircir,</p>
+    <p><em>ⲭⲃⲟⲃ</em>, <i>qual.</i> <em>ⲕⲏⲃ</em> (23) se refroidir,</p>
+    <p><em>ϭⲛⲟⲛ</em>, <i>qual.</i> <em>ϫⲏⲛ</em> (23) devenir tendre.</p>
+    <p>3. Verbes de trois radicales.</p>
+    <p>1. Parmi ces verbes, les uns ont la voyelle formative après la première radicale; ce sont les verbes <i>transitifs</i>:</p>
   </div>
 </div>
 	</body>
