--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2811,6 +2811,17 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     <p><em>ϭⲛⲟⲛ</em>, <i>qual.</i> <em>ϫⲏⲛ</em> (23) devenir tendre.</p>
     <p>3. Verbes de trois radicales.</p>
     <p>1. Parmi ces verbes, les uns ont la voyelle formative après la première radicale; ce sont les verbes <i>transitifs</i>:</p>
+    <table>
+      <tr>
+        <td><i>Règle:</i></td><td><em>ⲱ</em></td><td><em>ⲉ</em></td><td><em>ⲟ</em></td><td><em>ⲟ</em></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td><em>ⲫⲱⲣϣ</em></td><td><em>ⲫⲉⲣϣ-</em></td><td><em>ⲫⲟⲣϣ⸗</em></td><td><em>ⲫⲟⲣϣ</em></td><td>étendre</td>
+      </tr>
+      <tr>
+        <td></td><td><em>ⲱⲧⲡ</em></td><td><em>ⲉⲧⲡ-</em></td><td><em>ⲟⲧⲡ⸗</em></td><td><em>ⲟⲧⲡ</em></td><td>charger.</td>
+      </tr>
+    </table>
   </div>
 </div>
 	</body>
