--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2822,6 +2822,73 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
         <td></td><td><em>ⲱⲧⲡ</em></td><td><em>ⲉⲧⲡ-</em></td><td><em>ⲟⲧⲡ⸗</em></td><td><em>ⲟⲧⲡ</em></td><td>charger.</td>
       </tr>
     </table>
+    <p>De même:</p>
+    <p>1. Les verbes qui commencent par <em>ⲙ</em> <em>ⲛ</em> (29):</p>
+    <table>
+      <tr>
+        <td><em>ⲙⲟⲩⲛⲕ</em></td><td><em>ⲙⲉⲛⲕ-</em></td><td><em>ⲙⲟⲛⲕ⸗</em></td><td><em>ⲙⲟⲛⲕ</em></td><td>former,</td>
+      </tr>
+      <tr>
+        <td><em>ⲛⲟⲩⲧϥ</em></td><td><em>ⲛⲉⲧϥ-</em></td><td>—</td><td>—</td><td>arranger.</td>
+      </tr>
+    </table>
+    <p>2. Deux verbes bilitères en copte qui étaient trilitères en égyptien:</p>
+    <table>
+      <tr>
+        <td><em>ⲥⲱϥ</em></td><td><em>ⲥⲉϥ-</em></td><td><em>ⲥⲟϥ⸗</em></td><td><em>ⲥⲟϥ</em></td><td>profaner,</td>
+      </tr>
+      <tr>
+        <td><em>ⲧⲱⲃ</em></td><td><em>ⲧⲉⲃ-</em></td><td><em>ⲧⲟⲃ⸗</em></td><td><em>ⲧⲟⲃ</em></td><td>sceller.</td>
+      </tr>
+    </table>
+    <p>3. Quatre verbes terminés en <em>ⲓ</em>, dont deux sont intransitifs:</p>
+    <table>
+      <tr>
+        <td><em>ⲟⲩⲱϯ</em></td><td><em>ⲟⲩⲉⲧ-</em></td><td><em>ⲟⲩⲟⲧ⸗</em></td><td><em>ⲟⲩⲟⲧ</em></td><td>séparer,</td>
+      </tr>
+      <tr>
+        <td><em>ⲧⲱⲙⲓ</em></td><td><em>ⲧⲉⲙ-</em></td><td><em>ⲧⲟⲙ⸗</em></td><td><em>ⲧⲟⲙⲓ</em></td><td>unir,</td>
+      </tr>
+      <tr>
+        <td><em>ϣⲱⲡⲓ</em> (21)</td><td>—</td><td>—</td><td><em>ϣⲟⲡ</em></td><td>être,</td>
+      </tr>
+      <tr>
+        <td><em>ϫⲱⲣⲓ</em></td><td>—</td><td>—</td><td><em>ϫⲟⲡ</em></td><td>être fort.</td>
+      </tr>
+    </table>
+    <p>Dans les verbes terminés par <em>ⲃ</em> <em>ⲙ</em> <em>ⲛ</em>, la voyelle auxiliaire <em>ⲉ</em> est écrite:</p>
+    <table>
+      <tr>
+        <td><em>ⲑⲱⲕⲉⲙ</em></td><td><em>ⲑⲉⲕⲉⲙ-</em></td><td><em>ⲑⲟⲕⲙ⸗</em></td><td><em>ⲑⲟⲕⲉⲙ</em></td><td>dégainer.</td>
+      </tr>
+    </table>
+    <p>Devant <em>ϧ</em> <em>ϩ</em>, <em>ⲟ</em> se change en <em>ⲁ</em>; de même <em>ⲉ</em> de l'état construit quand le verbe se termine par <em>ⲙ</em> (30):</p>
+    <table>
+      <tr>
+        <td><em>ⲣⲱϧⲧ</em></td><td><em>ⲣⲉϧⲧ-</em></td><td><em>ⲣⲁϧⲧ⸗</em></td><td><em>ⲣⲁϧⲧ</em></td><td>renverser,</td>
+      </tr>
+      <tr>
+        <td><em>ⲑⲱϩⲉⲙ</em></td><td><em>ⲑⲁϩⲉⲙ-</em></td><td><em>ⲑⲁϩⲙ⸗</em></td><td><em>ⲑⲁϩⲉⲙ</em></td><td>appeler.</td>
+      </tr>
+    </table>
+    <p><em>ⲱ</em> se change en <em>ⲟ</em> dans:</p>
+    <table>
+      <tr>
+        <td><em>ϫⲟⲕϩ</em></td><td><em>ϫⲉⲕϩ-</em></td><td><em>ϫⲟⲕϩ⸗</em></td><td><em>ϫⲟⲕϩ</em></td><td>piquer,</td>
+      </tr>
+    </table>
+    <p>et dans <em>ϣⲟⲕϩ</em> percer, <em>ϣⲟⲛϩ ϣⲟⲛϩ⸗</em> priver.</p>
+    <p>II. Les verbes <i>intransitifs</i> ont pour voyelle formative <em>ⲟ</em> après la deuxième radicale à l'infinitif, après la première au qualitatif.</p>
+    <table>
+      <tr>
+        <td><i>Règle:</i></td><td><em>ⲟ</em></td><td>—</td><td>—</td><td><em>ⲟ</em></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td><em>ϩⲗⲟϫ</em></td><td>—</td><td>—</td><td><em>ϩⲟⲗϫ</em></td><td>devenir doux</td>
+      </tr>
+    </table>
+    <p>De même les verbes suivants, dans lesquels il s'est produit un changement de voyelle ou de consonne:</p>
+    
   </div>
 </div>
 	</body>
