--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2888,6 +2888,26 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
       </tr>
     </table>
     <p>De même les verbes suivants, dans lesquels il s'est produit un changement de voyelle ou de consonne:</p>
+    <table>
+      <tr>
+        <td><em>ⲙ̀ⲕⲁϩ</em> (30)</td><td><em>ⲙⲟⲕϩ</em></td><td>souffrir,</td>
+      </tr>
+      <tr>
+        <td><em>ϣⲗⲁϩ</em></td><td><em>ϣⲟⲗϩ</em></td><td>trembler,</td>
+      </tr>
+      <tr>
+        <td><em>ϩⲕⲟ</em> (21)</td><td><em>ϩⲟⲕⲉⲣ</em></td><td>avoir fam,</td>
+      </tr>
+      <tr>
+        <td><em>ⲟⲩⲃⲁϣ</em></td><td><em>ⲟⲩⲟⲃϣ</em></td><td>blanchir,</td>
+      </tr>
+      <tr>
+        <td><em>ⲛ̀ϣⲟⲧ</em></td><td><em>ⲛⲁϣⲧ</em> (30)</td><td>durcir,</td>
+      </tr>
+      <tr>
+        <td><em>ϭⲣⲟϩ</em></td><td><em>ϫⲟⲣϩ</em> (23)</td><td>diminuer.</td>
+      </tr>
+    </table>
     
   </div>
 </div>
