--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2908,7 +2908,61 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
         <td><em>ϭⲣⲟϩ</em></td><td><em>ϫⲟⲣϩ</em> (23)</td><td>diminuer.</td>
       </tr>
     </table>
-    
+    <p>III. Les verbes intransitifs en <em>ⲁⲓ</em>, à l'infinitif, ont aussi leur qualitatif en <em>ⲟ</em>:</p>
+    <table>
+      <tr>
+        <td><em>ⲁϣⲁⲓ</em></td><td><em>ⲟϣ</em></td><td>se multiplier,</td>
+      </tr>
+      <tr>
+        <td><em>ⲟⲩϫⲁⲓ</em></td><td><em>ⲟⲩⲟϫ</em></td><td>être sain,</td>
+      </tr>
+      <tr>
+        <td><em>ϧⲑⲁⲓ</em></td><td><em>ϧⲟⲧ</em></td><td>engraisser.</td>
+      </tr>
+    </table>
+    <p>Les verbes transitifs en <em>ⲁⲓ</em> suivent le modèle des verbes causatifs (223, 1):</p>
+    <table>
+      <tr>
+        <td><em>ⲥϧⲁⲓ</em></td><td><em>ⲥϧⲉ-</em></td><td><em>ⲥϧⲏⲧ⸗</em></td><td><em>ⲥϧⲏⲟⲩⲧ</em></td><td>écrire.</td>
+      </tr>
+    </table>
+    <p>Les deux verbes <em>ⲥⲱⲟⲩⲛ</em> «connaître» et <em>ⲧⲱⲟⲩⲛ</em> «lever», qui ont <em>ⲟⲩ</em> pour seconde radicale, varient d'une manière tout à fait spéciale:</p>
+    <table>
+      <tr>
+        <td><em>ⲥⲱⲟⲩⲛ</em></td><td><em>ⲥⲟⲩⲉⲛ-</em></td><td><em>ⲥⲟⲩⲱⲛ⸗</em></td><td><em>ⲥⲟⲩⲏⲛ</em> (<em>ⲥⲟⲩⲉⲛ</em>)</td>
+      </tr>
+      <tr>
+        <td><em>ⲧⲱⲟⲩⲛ</em></td><td><em>ⲧⲉⲛ-</em></td><td><em>ⲧⲱⲛ⸗</em></td><td>—</td>
+      </tr>
+    </table>
+    <p>A côté de la forme ordinaire de l'infinitif pronominal <em>ⲥⲟⲩⲱⲛ⸗</em>, <em>ⲧⲱⲛ⸗</em>, ils en ont une autre qui s'emploie devant le suffixe <em>ⲟⲩ</em> de la 3<sup>e</sup> plur. <em>ⲥⲱⲟⲩⲛ⸗</em> <em>ⲧⲱⲟⲩⲛ⸗</em>, sans doute par attraction.</p>
+    <p><em>ϯⲥⲱⲟⲩⲛⲟⲩ</em> «je les connais»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲁⲩⲧⲱⲟⲩⲛⲟⲩ</em> «ils se levèrent».</p>
+    <p>On trouve aussi <em>ⲥⲱⲟⲩⲛⲟⲩ</em> et <em>ⲧⲱⲟⲩⲛⲟⲩ</em> comme formes pleines à l'état absolu.</p>
+    <p class="footnote">1. OSE. 9.</p>
+    <p>4. Verbes à 3' radicale faible.</p>
+    <p>I. Parmi ces verbes<sup class="footnote">1</sup> les uns ont, pour voyelle formative, <em>ⲓ</em> après la première radicale; ils sont transitifs ou intransitifs:</p>
+    <table>
+      <tr>
+        <td><i>Règle</i></td><td><em>ⲓ . ⲓ</em></td><td><em>ⲉ</em></td><td><em>ⲁ</em></td><td><em>ⲟ . ⲓ</em></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td><em>ⲙⲓⲥⲓ</em></td><td><em>ⲙⲉⲥ-</em></td><td><em>ⲙⲁⲥ⸗</em></td><td><em>ⲙⲟⲥⲓ</em></td><td>enfanter,</td>
+      </tr>
+      <tr>
+        <td></td><td><em>ⲗⲓⲃⲓ</em></td><td>—</td><td>—</td><td><em>ⲗⲟⲃⲓ</em></td><td>délirer.</td>
+      </tr>
+    </table>
+    <p>Devant <em>ⲃ</em> <em>ⲙ</em> <em>ⲛ</em>, <em>ⲁ</em> se change en <em>ⲉ</em>:</p>
+    <table>
+      <tr>
+        <td><em>ϫⲓⲙⲓ</em></td><td><em>ϫⲉⲙ-</em></td><td><em>ϫⲉⲙ⸗</em></td><td>—</td><td>trouver,</td>
+      </tr>
+      <tr>
+        <td><em>ⲓⲛⲓ</em></td><td><em>ⲉⲛ-</em></td><td><em>ⲉⲛ⸗</em></td><td>—</td><td>porter.</td>
+      </tr>
+    </table>
+    <p>Devant <em>ⲕ</em> <em>ϣ</em> <em>ϧ</em>, <em>ⲟ</em> est remplacé par <em>ⲁ</em>:</p>
   </div>
 </div>
 	</body>
