--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2963,6 +2963,29 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
       </tr>
     </table>
     <p>Devant <em>ⲕ</em> <em>ϣ</em> <em>ϧ</em>, <em>ⲟ</em> est remplacé par <em>ⲁ</em>:</p>
+    <table>
+      <tr>
+        <td><em>ⲣⲓⲕⲓ</em></td><td><em>ⲣⲉⲕ-</em></td><td><em>ⲣⲁⲕ⸗</em></td><td><em>ⲣⲁⲕⲓ</em></td><td>incliner,</td>
+      </tr>
+      <tr>
+        <td><em>ⲓϣⲓ</em></td><td><em>ⲉϣ-</em></td><td><em>ⲁϣ⸗</em></td><td><em>ⲁϣⲓ</em></td><td>suspendre,</td>
+      </tr>
+      <tr>
+        <td><em>ⲑⲓϧⲓ</em></td><td>—</td><td>—</td><td><em>ⲑⲁϧⲓ</em></td><td>s'enivrer.</td>
+      </tr>
+    </table>
+    <p><i>Exceptions:</i></p>
+    <table>
+      <tr>
+        <td><em>ⲓⲣⲓ</em></td><td><em>ⲉⲣ-</em></td><td><em>ⲁⲓ⸗</em></td><td><em>ⲟⲓ</em> (27)</td><td>faire,</td>
+      </tr>
+      <tr>
+        <td><em>ϯ</em></td><td><em>ϯ-</em></td><td><em>ⲧⲏⲓ⸗</em></td><td><em>ⲧⲟⲓ</em></td><td>donner,</td>
+      </tr>
+      <tr>
+        <td><em>ϩⲓⲟⲩⲓ</em></td><td><em>ϩⲓ-</em></td><td><em>ϩⲓⲧ⸗</em></td><td><em>ϩⲱⲟⲩⲓ</em> (32)</td><td>jeter.</td>
+      </tr>
+    </table>
   </div>
 </div>
 	</body>
