--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -2986,6 +2986,43 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
         <td><em>ϩⲓⲟⲩⲓ</em></td><td><em>ϩⲓ-</em></td><td><em>ϩⲓⲧ⸗</em></td><td><em>ϩⲱⲟⲩⲓ</em> (32)</td><td>jeter.</td>
       </tr>
     </table>
+    <p>II. Les autres ont différentes voyelles formatives à l'infinitif et forment leur qualitatif en <em>ⲱⲟⲩ</em>. Ils sont tous intransitifs:</p>
+    <table>
+      <tr>
+        <td><em>ⲫⲉⲣⲓ</em></td><td><em>ⲫⲉⲣⲓⲱⲟⲩ</em></td><td>briller,</td>
+      </tr>
+      <tr>
+        <td><em>ϩⲉⲣⲓ</em></td><td><em>ϩⲟⲩⲣⲱⲟⲩ</em></td><td>s'apaiser,</td>
+      </tr>
+      <tr>
+        <td><em>ϣⲁϥⲓ</em></td><td><em>ϣⲁϥⲓⲱⲟⲩ</em></td><td>enfler,</td>
+      </tr>
+      <tr>
+        <td><em>ϣⲱⲟⲩⲓ</em></td><td><em>ϣⲟⲩⲱⲟⲩ</em></td><td>sécher,</td>
+      </tr>
+      <tr>
+        <td><em>ⲁⲥⲓⲁⲓ</em></td><td><em>ⲁⲥⲓⲱⲟⲩ</em></td><td>guérir,</td>
+      </tr>
+      <tr>
+        <td><em>ϣⲁⲓ</em></td><td><em>ϣⲁⲓⲱⲟⲩ</em></td><td>briller.</td>
+      </tr>
+    </table>
+    <p>III. Quatre verbes, dont deux sont transitifs et deux intransitifs, ont leur qualitatif en <em>ⲱⲟⲩ</em>:</p>
+    <p class="footnote">1. Ces verbes, tels qu'ils existent en copte, ne sont composés que de deux radicales; <em>ⲙⲓⲥⲓ</em> dérive de l'ég. <i>mst</i>, prononcé <i>misit</i>, dans lequel le <i>t</i>, terminaison du féminin, a disparu. Ils avaient primitivement une troisième radicale faible, <i>y</i> ou bien <i>w</i>, qui a disparu en copte.</p>
+    <table>
+      <tr>
+        <td><em>ϣⲓ</em></td><td><em>ϣⲓ-</em></td><td><em>ϣⲓⲧ⸗</em></td><td><em>ϣⲏⲟⲩ</em></td><td>mesurer,</td>
+      </tr>
+      <tr>
+        <td><em>ϭⲓ</em></td><td><em>ϭⲓ-</em></td><td><em>ϭⲓⲧ⸗</em></td><td><em>ϭⲏⲟⲩ</em></td><td>prendre,</td>
+      </tr>
+      <tr>
+        <td><em>ⲥⲓ</em></td><td>—</td><td><em>—</td><td><em>ⲥⲏⲟⲩ</em></td><td>se rassasier,</td>
+      </tr>
+      <tr>
+        <td><em>ⲟⲩⲉⲓ</em></td><td>—</td><td><em>—</td><td><em>ⲟⲩⲏⲟⲩ</em></td><td>s'éloigner.</td>
+      </tr>
+    </table>
   </div>
 </div>
 	</body>
