--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3023,6 +3023,37 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
         <td><em>ⲟⲩⲉⲓ</em></td><td>—</td><td><em>—</td><td><em>ⲟⲩⲏⲟⲩ</em></td><td>s'éloigner.</td>
       </tr>
     </table>
+    <p>De <em>ϣⲓ</em> <em>ϭⲓ</em> doivent être rapprochés, pour les formes de l'infinitif, les deux verbes:</p>
+    <table>
+      <tr>
+        <td><em>ⲙⲉⲓ</em></td><td><em>ⲙⲉⲛⲣⲉ-</em></td><td><em>ⲙⲉⲛⲣⲓⲧ⸗</em></td><td>(<em>ⲙⲉⲛⲣⲓⲧ</em>)</td><td>aimer,</td>
+      </tr>
+      <tr>
+        <td><em>ϥⲁⲓ</em></td><td><em>ϥⲓ-</em></td><td><em>ϥⲓⲧ⸗</em></td><td>—</td><td>porter.</td>
+      </tr>
+    </table>
+    <p>Dans ces quatre verbes, de même que dans <em>ϩⲓⲟⲩⲓ</em>, le <em>ⲧ</em> de l'état pronominal est l'ancien <i>t</i> du féminin (194).</p>
+    <p>5. Verbes de 4 et de 5 radicales.</p>
+    <table>
+      <tr>
+        <td><i>Règle:</i></td><td><em>ⲟ . ⲉ</em></td><td><em>ⲉ . ⲉ</em></td><td><em>ⲉ . ⲱ</em></td><td><em>ⲉ . ⲱ</em></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td><em>ⲃⲟⲣⲃⲉⲣ</em></td><td><em>ⲃⲉⲣⲃⲉⲣ-</em></td><td><em>ⲃⲉⲣⲃⲱⲣ⸗</em></td><td><em>ⲃⲉⲣⲃⲱⲣ</em></td><td>jeter,</td>
+      </tr>
+      <tr>
+        <td></td><td><em>ⲥⲕⲟⲣⲕⲉⲣ</em></td><td><em>ⲥⲕⲉⲣⲕⲉⲣ-</em></td><td><em>ⲥⲕⲉⲣⲕⲱⲣ⸗</em></td><td><em>ⲥⲕⲉⲣⲕⲱⲣ</em></td><td>faire rouler</td>
+      </tr>
+    </table>
+    <p>A l'exception de <em>ⲟⲩⲟⲥⲑⲉⲛ</em> «élargir», tous les verbes de ces deux classes sont formés par un redoublement. Lorsque le thème primitif est bilitère, il se redouble en entier: <em>ϩⲟⲛϩⲉⲛ</em> «ordonner» de <em>ϩⲱⲛ</em> «ordre, ordonner». Lorsqu'il est trilitère, les deux dernières lettres seules se redoublent:</p>
+    <p><em>ⲑⲣⲟϣⲣⲉϣ</em> «devenir rouge» de <em>ⲑⲣⲟϣ</em> «être rouge».</p>
+    <p>Il ne s'est conservé dans la langue copte qu'un fort petit nombre des racines de ces verbes.</p>
+    <p>Quelques verbes de cette classe ont un infinitif intransitif en <em>ⲉ</em>:</p>
+    <p><em>ⲥⲕⲟⲣⲕⲉⲣ</em> «faire rouler», <em>ⲥⲕⲉⲣⲕⲉⲣ</em> «rouler».</p>
+    <p>De même: <em>ⲃⲉⲣⲃⲉⲣ</em> «bouillir», <em>ⲧⲉⲗⲧⲉⲗ</em> «tomber goutte à goutte», <em>ⲭⲣⲉⲙⲣⲉⲙ</em> «murmurer».</p>
+    <p><em>ⲥⲕⲉⲣⲕⲉⲣ</em> et <em>ⲧⲉⲗⲧⲉⲗ</em> sont aussi transitifs et se construisent avec ou sans <em>ⲛ̀<sup class="footnote">1</sup></em>.</p>
+    <p class="footnote">1. Cf. AB. 29, 30.</p>
+    
   </div>
 </div>
 	</body>
