--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3017,10 +3017,10 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
         <td><em>ϭⲓ</em></td><td><em>ϭⲓ-</em></td><td><em>ϭⲓⲧ⸗</em></td><td><em>ϭⲏⲟⲩ</em></td><td>prendre,</td>
       </tr>
       <tr>
-        <td><em>ⲥⲓ</em></td><td>—</td><td><em>—</td><td><em>ⲥⲏⲟⲩ</em></td><td>se rassasier,</td>
+        <td><em>ⲥⲓ</em></td><td>—</td><td>—</td><td><em>ⲥⲏⲟⲩ</em></td><td>se rassasier,</td>
       </tr>
       <tr>
-        <td><em>ⲟⲩⲉⲓ</em></td><td>—</td><td><em>—</td><td><em>ⲟⲩⲏⲟⲩ</em></td><td>s'éloigner.</td>
+        <td><em>ⲟⲩⲉⲓ</em></td><td>—</td><td>—</td><td><em>ⲟⲩⲏⲟⲩ</em></td><td>s'éloigner.</td>
       </tr>
     </table>
     <p>De <em>ϣⲓ</em> <em>ϭⲓ</em> doivent être rapprochés, pour les formes de l'infinitif, les deux verbes:</p>
@@ -3053,7 +3053,59 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     <p>De même: <em>ⲃⲉⲣⲃⲉⲣ</em> «bouillir», <em>ⲧⲉⲗⲧⲉⲗ</em> «tomber goutte à goutte», <em>ⲭⲣⲉⲙⲣⲉⲙ</em> «murmurer».</p>
     <p><em>ⲥⲕⲉⲣⲕⲉⲣ</em> et <em>ⲧⲉⲗⲧⲉⲗ</em> sont aussi transitifs et se construisent avec ou sans <em>ⲛ̀<sup class="footnote">1</sup></em>.</p>
     <p class="footnote">1. Cf. AB. 29, 30.</p>
-    
+    <p>6. Verbes à 3<sup>e</sup> radicale géminée et à 4<sup>e</sup> faible.</p>
+    <p>Des verbes à troisième radicale géminée, il ne s'est conservé en copte que:</p>
+    <table>
+      <tr>
+        <td><em>ⲥⲟⲃϯ</em> (<i>spdd</i>)</td><td><em>ⲥⲉⲃⲧⲉ-</em></td><td><em>ⲥⲉⲃⲧⲱⲧ⸗</em></td><td><em>ⲥⲉⲃⲧⲱⲧ</em></td><td>prépaper</td>,
+      </tr>
+    </table>
+    <p>dans lequel le redoublement ne subsiste qu'aux deux dernières formes.</p>
+    <p>De même, les verbes à quatrième radicale faible ont presque entièrement disparu en copte; on peut citer:</p>
+    <table>
+      <tr>
+        <td><em>ⲙⲟⲥϯ</em> (<i>msdy</i>)</td><td><em>ⲙⲉⲥⲧⲉ-</em></td><td><em>ⲙⲉⲥⲧⲱ⸗</em></td><td>—</td><td>haïr,</td>
+      </tr>
+      <tr>
+        <td><em>ⲙⲟⲛⲓ</em></td><td>—</td><td><em>ⲙⲁⲛⲟⲩ⸗</em> (29)</td><td>—</td><td>faire paître,</td>
+      </tr>
+    </table>
+    <p><em>ϫⲱⲓⲗⲓ</em> être étranger; <em>ⲥⲟϭⲛⲓ</em> délibérer.</p>
+    <p>Tableau synoptique des huit classes de verbes.</p>
+    <p>En tenant compte du qualitatif de la <i>majeure</i> partie des verbes, les huit classes se groupent ainsi:</p>
+    <table>
+      <tr>
+        <th></th><th></th><th></th><th>Infinitif</th><th></th><th></th><th>Qualitatif</th><th></th>
+      </tr>
+      <tr>
+        <td></td><td></td><td></td><td>abs.</td><td>const.</td><td>pron.</td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>I</td><td>1.</td><td>2 rad.</td><td><em>ⲱ</em></td><td><em>ⲉ</em></td><td><em>ⲟ</em></td><td><em>ⲏ</em></td><td>à la première syllabe.</td>
+      </tr>
+      <tr>
+        <td></td><td>2.</td><td>2<sup>e</sup> gém.</td><td><em>ⲟ</em></td><td>—</td><td>—</td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>II</td><td>3.</td><td>3 rad.</td><td><em>ⲱ</em></td><td><em>ⲉ</em></td><td><em>ⲟ</em></td><td><em>ⲟ</em></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td>4.</td><td>3<sup>e</sup> faible</td><td><em>ⲓ</em></td><td><em>ⲉ</em></td><td><em>ⲁ</em></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>III</td><td>5.</td><td>4 rad.</td><td><em>ⲟ</em></td><td><em>ⲉ</em></td><td><em>ⲱ</em></td><td><em>ⲱ</em></td><td>à la dernière syllabe.</td>
+      </tr>
+      <tr>
+        <td></td><td>6.</td><td>5 rad.</td><td><em>ⲟ</em></td><td><em>ⲉ</em></td><td><em>ⲱ</em></td><td><em>ⲱ</em></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td>7.</td><td>3<sup>e</sup> gém.</td><td><em>ⲟ</em></td><td><em>ⲉ</em></td><td><em>ⲱ</em></td><td><em>ⲱ</em></td><td></td>
+      </tr>
+      <tr>
+        <td></td><td>8.</td><td>4<sup>e</sup> faible</td><td><em>ⲟ</em></td><td><em>ⲉ</em></td><td><em>ⲱ</em></td><td><em>ⲱ</em></td><td></td>
+      </tr>
+    </table>
+    <p>Paradigmes.</p>
   </div>
 </div>
 	</body>
