--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3106,6 +3106,40 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
       </tr>
     </table>
     <p>Paradigmes.</p>
+    <table>
+      <tr>
+        <td>I</td><td>1.</td><td><em>ⲃⲱⲗ</em></td><td><em>ⲃⲉⲗ-</em></td><td><em>ⲃⲟⲗ⸗</em></td><td><em>ⲃⲏⲗ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>2.</td><td><em>ϧⲙⲟⲙ</em></td><td>—</td><td>—</td><td><em>ϧⲏⲙ</em></td>
+      </tr>
+      <tr>
+        <td>II</td><td>3.</td><td><em>ⲫⲱⲣϣ</em></td><td><em>ⲫⲉⲣϣ-</em></td><td><em>ⲫⲟⲣϣ⸗</em></td><td><em>ⲫⲟⲣϣ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>4.</td><td><em>ⲙⲓⲥⲓ</em></td><td><em>ⲙⲉⲥ-</em></td><td><em>ⲙⲁⲥ⸗</em></td><td><em>ⲙⲟⲥⲓ</em></td>
+      </tr>
+      <tr>
+        <td>III</td><td>5.</td><td><em>ⲃⲟⲣⲃⲉⲣ</em></td><td><em>ⲃⲉⲣⲃⲉⲣ-</em></td><td><em>ⲃⲉⲣⲃⲱⲣ⸗</em></td><td><em>ⲃⲉⲣⲃⲱⲣ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>6.</td><td><em>ⲥⲕⲟⲣⲕⲉⲣ</em></td><td><em>ⲥⲕⲉⲣⲕⲉⲣ-</em></td><td><em>ⲥⲕⲉⲣⲕⲱⲣ⸗</em></td><td><em>ⲥⲕⲉⲣⲕⲱⲣ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>7.</td><td><em>ⲥⲟⲃϯ</em></td><td><em>ⲥⲉⲃⲧⲉ-</em></td><td><em>ⲥⲉⲃⲧⲱⲧ⸗</em></td><td><em>ⲥⲉⲃⲧⲱⲧ</em></td>
+      </tr>
+      <tr>
+        <td></td><td>8.</td><td><em>ⲙⲟⲥϯ</em></td><td><em>ⲙⲉⲥⲧⲉ-</em></td><td><em>ⲙⲉⲥⲧⲱ⸗</em></td><td>—</td>
+      </tr>
+    </table>
+    <p>La plupart des exceptions se trouvent dans le groupe II.</p>
+    <p>B. Verbes causatifs.</p>
+    <p>Les verbes causatifs se divisent en deux classes:</p>
+    <p>1. Les causatifs formés du préfixe <em>ⲥ</em>,</p>
+    <p>2. Les causatifs formés du préfixe <em>ⲧ</em>.</p>
+    <p><i>1. Causatifs formés de <em>ⲥ</em>.</i></p>
+    <p>Cette formation est la plus ancienne; elle était fréquente en égyptien. En copte elle n'a donné qu'un petit nombre de verbes.</p>
+    <p>I. Cinq de ces verbes dérivent d'un radical bilitère et ont un infinitif féminin avec <em>ⲁ</em> ou <em>ⲉ</em> pour voyelle formative, leur qualitatif est en <em>ⲏⲟⲩⲧ</em>:</p>
   </div>
 </div>
 	</body>
