--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3057,7 +3057,7 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     <p>Des verbes à troisième radicale géminée, il ne s'est conservé en copte que:</p>
     <table>
       <tr>
-        <td><em>ⲥⲟⲃϯ</em> (<i>spdd</i>)</td><td><em>ⲥⲉⲃⲧⲉ-</em></td><td><em>ⲥⲉⲃⲧⲱⲧ⸗</em></td><td><em>ⲥⲉⲃⲧⲱⲧ</em></td><td>prépaper</td>,
+        <td><em>ⲥⲟⲃϯ</em> (<i>spdd</i>)</td><td><em>ⲥⲉⲃⲧⲉ-</em></td><td><em>ⲥⲉⲃⲧⲱⲧ⸗</em></td><td><em>ⲥⲉⲃⲧⲱⲧ</em></td><td>prépaper</td>
       </tr>
     </table>
     <p>dans lequel le redoublement ne subsiste qu'aux deux dernières formes.</p>
@@ -3140,6 +3140,35 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     <p><i>1. Causatifs formés de <em>ⲥ</em>.</i></p>
     <p>Cette formation est la plus ancienne; elle était fréquente en égyptien. En copte elle n'a donné qu'un petit nombre de verbes.</p>
     <p>I. Cinq de ces verbes dérivent d'un radical bilitère et ont un infinitif féminin avec <em>ⲁ</em> ou <em>ⲉ</em> pour voyelle formative, leur qualitatif est en <em>ⲏⲟⲩⲧ</em>:</p>
+    <table>
+      <tr>
+        <td><em>ⲥⲁϩⲛⲓ</em> (<em>ϩⲱⲛ</em>)</td><td><em>ⲥⲉϩⲛⲉ-</em></td><td><em>ⲥⲁϩⲛⲏⲧ⸗</em></td><td><em>ⲥⲉϩⲛⲏⲟⲩⲧ</em></td><td>fournir,</td>
+      </tr>
+      <tr>
+        <td><em>ⲥⲉⲙⲛⲓ</em> (<em>ⲙⲟⲩⲛ</em>)</td><td><em>ⲥⲉⲙⲛⲉ-</em></td><td><em>ⲥⲉⲙⲛⲏⲧ⸗</em></td><td><em>ⲥⲉⲙⲛⲏⲟⲩⲧ</em></td><td>établir,</td>
+      </tr>
+      <tr>
+        <td><em>ⲥⲉⲃⲓ</em> (<em>ⲟⲩⲁⲃ</em>)</td><td><em>ⲥⲟⲩⲃⲉ-</em></td><td><em>ⲥⲟⲩⲃⲏⲧ⸗</em></td><td><em>ⲥⲉⲃⲏⲟⲩⲧ</em></td><td>circoncire,</td>
+      </tr>
+    </table>
+    <p><em>ⲥⲁϫⲓ</em> (<em>ϫⲱ</em>) parler, <em>ⲥⲉⲙⲓ</em> (ég. <i>s-myt</i>) plaider.</p>
+    <p>B. Quatre autres sont formés d'un radical trilitère et ont un infinitif masculin:</p>
+    <table>
+      <tr>
+        <td><em>ⲥⲱⲟⲩⲧⲉⲛ</em> (<em>ⲧⲱⲟⲩⲛ</em>)</td><td><em>ⲥⲟⲩⲧⲉⲛ-</em></td><td><em>ⲥⲟⲩⲧⲱⲛ⸗</em></td><td><em>ⲥⲟⲩⲧⲱⲛ</em></td><td>diriger,</td>
+      </tr>
+      <tr>
+        <td><em>ⲥⲁϩⲟⲩⲓ</em> (ég. <i>s-hwr</i>)</td><td><em>ⲥϩⲟⲩⲉⲣ-</em></td><td><em>ⲥϩⲟⲩⲱⲣ⸗</em></td><td><em>ⲥϩⲟⲩⲱⲣⲧ</em></td><td>maudire,</td>
+      </tr>
+      <tr>
+        <td><em>ⲥⲟϩⲓ</em> (<em>ⲟϩⲓ</em>)</td><td>—</td><td><em>ⲥⲁϩⲱ⸗</em></td><td>—</td><td>réprimander,</td>
+      </tr>
+      <tr>
+        <td><em>ϣⲁⲛϣ</em> (<em>ⲱⲛϧ</em>)</td><td><em>ϣⲁⲛⲉϣ-</em></td><td><em>ϣⲁⲛⲟⲩϣ⸗</em></td><td><em>ϣⲁⲛⲉⲩϣ</em></td><td>nourrir.</td>
+      </tr>
+    </table>
+    <p>Dans ce dernier verbe, il s'est produit un double changement, du <em>ⲥ</em> en <em>ϣ</em> et du <em>ϧ</em> de <em>ⲱⲛϧ</em> en <em>ϣ</em>. Le correspondant ṣaꜥidique de ce mot est <em>ⲥⲁⲛϣ</em>.</p>
+    <p><i>2. Verbes causatifs formés du préfixe <em>ⲧ</em><sup class="footnote">1</sup>.</i></p>
   </div>
 </div>
 	</body>
