--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3169,6 +3169,36 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     </table>
     <p>Dans ce dernier verbe, il s'est produit un double changement, du <em>ⲥ</em> en <em>ϣ</em> et du <em>ϧ</em> de <em>ⲱⲛϧ</em> en <em>ϣ</em>. Le correspondant ṣaꜥidique de ce mot est <em>ⲥⲁⲛϣ</em>.</p>
     <p><i>2. Verbes causatifs formés du préfixe <em>ⲧ</em><sup class="footnote">1</sup>.</i></p>
+    <table>
+      <tr>
+        <td><i>Règle:</i></td><td><em>-ⲟ</em></td><td><em>-ⲉ-</em></td><td><em>-ⲟ⸗</em></td><td><em>-ⲏⲟⲩⲧ</em>.</td><td></td>
+      </tr>
+      <tr>
+        <td></td><td><em>ⲧⲁⲕⲟ</em></td><td><em>ⲧⲁⲕⲉ-</em></td><td><em>ⲧⲁⲕⲟ⸗</em></td><td><em>ⲧⲁⲕⲏⲟⲩⲧ</em></td><td>perdre.</td>
+      </tr>
+    </table>
+    <p>Cette formation est beaucoup plus récente que la précédente; elle a fourni au copte un grand nombre de verbes.</p>
+    <p>Le <em>ⲧ</em> n'est autre chose qu'une forme abrégée de <em>ϯ</em> «donner, faire que». Il rend actifs les verbes neutres:</p>
+    <p><em>ⲟϩⲓ</em> «se tenir», <em>ⲧⲁϩⲟ</em> «faire tenir, placer»;</p>
+    <p><em>ⲱⲛϧ</em> «vivre», <em>ⲧⲁⲛϧⲟ</em> «vivifier».</p>
+    <p>Aux verbes transitifs il donne le sens causatif:</p>
+    <p><em>ⲱⲗⲓ</em> «lever», <em>ⲧⲁⲗⲟ</em> «faire lever, charger»;</p>
+    <p><em>ⲥⲱ</em> «boire», <em>ⲧⲥⲟ</em> «faire boire, abreuver».</p>
+    <p>Il forme des verbes actifs avec des substantifs et des adjectifs:</p>
+    <p><em>ⲁⲕⲱ</em> «perte», <em>ⲧⲁⲕⲟ</em> «faire périr, perdre»;</p>
+    <p><em>ⲥⲁⲃⲉ</em> «prudent», <em>ⲧⲥⲁⲃⲟ</em> «instruire».</p>
+    <p>Tous les verbes de cette classe sont formés de la même manière.</p>
+    <p class="footnote">1. Cf. Maspero, <i>Revue critique</i>, 16 Août 1904, 33–34.</p>
+    <p>Ils ont pour voyelle formative <em>ⲟ</em> à la dernière syllabe qui est toujours ouverte.</p>
+    <p>Les syllabes qui précèdent ont la voyelle auxiliaire après <em>ⲧ</em>, si le radical est bilitère; après la première lettre, s'il est trilitère:</p>
+    <p><em>ⲙⲟϩ</em> «brûler», <em>ⲧⲉⲙϩⲟ</em> «faire brûler»;</p>
+    <p><em>ϩⲉⲙⲥⲓ</em> «s'asseoir», <em>ⲧϩⲉⲙⲥⲟ</em> «faire asseoir».</p>
+    <p>La voyelle auxiliaire devrait être <em>ⲉ</em>; mais dans beaucoup de verbes, diverses influences, spécialement la présence d'un <i>ꜥain</i> (<em>ع</em>) ancien (31), ont causé le remplacement de <em>ⲉ</em> par <em>ⲁ</em>:</p>
+    <p><em>ⲧⲁϣⲟ</em> «multiplier», <em>ⲧⲁⲣⲕⲟ</em> «adjurer».</p>
+    <p>Lorsque le radical commence par la semi-consonne <em>ⲟⲩ</em>, la voyelle auxiliaire disparaît:</p>
+    <p><em>ⲟⲩⲁⲃ</em> «être pur», <em>ⲧⲟⲩⲃⲟ</em> «purifier»;</p>
+    <p><em>ⲟⲩϫⲁⲓ</em> «être sain», <em>ⲧⲟⲩϫⲟ</em> «guérir».</p>
+    <p>Dans quelques verbes, elle n'est pas écrite et s'abrège en un simple <i>e muet</i>: <em>ⲧϣⲙⲟ</em> «briser», <em>ⲧⲥⲓⲟ</em> «rassasier».</p>
   </div>
 </div>
 	</body>
